<resources>
    <string name="app_name">Horoscope_Revisited</string>
    <string name="app_title">Look to the Stars</string>

    <string name="aquarius_title">Aquarius - The Water Bearer</string>
    <string name="aquarius_dates">January 18 - February 20</string>
    <string name="Aquarius">Aquarius</string>
    <string name="pisces_title">Pisces - The Fish</string>
    <string name="pisces_dates">February 21 - March 20</string>
    <string name="Pisces">Pisces</string>
    <string name="aries_title">Aries - The Ram</string>
    <string name="aries_dates">March 21 - April 19</string>
    <string name="Aries">Aries</string>
    <string name="taurus_title">Taurus - The Bull</string>
    <string name="taurus_dates">April 20 - May 20</string>
    <string name="Taurus">Taurus</string>
    <string name="gemini_title">Gemini - The Twins</string>
    <string name="gemini_dates">May 21 - June 21</string>
    <string name="Gemini">Gemini</string>
    <string name="cancer_title">Cancer - The Crab</string>
    <string name="cancer_dates">June 22 - July 23</string>
    <string name="Cancer">Cancer</string>
    <string name="leo_title">Leo - The Lion</string>
    <string name="leo_dates">July 24 - August 27</string>
    <string name="Leo">Leo</string>
    <string name="virgo_title">Virgo - The Virgin</string>
    <string name="virgo_dates">August 28 - September 23</string>
    <string name="Virgo">Virgo</string>
    <string name="libra_title">Libra - The Scales</string>
    <string name="libra_dates">September 24 - October 23</string>
    <string name="Libra">Libra</string>
    <string name="scorpio_title">Scorpio - The Scorpion</string>
    <string name="scorpio_dates">October 24 - November 20</string>
    <string name="Scorpio">Scorpio</string>
    <string name="sagittarius_title">Sagittarius - The Archer</string>
    <string name="sagittarius_dates">November 21 - December 22</string>
    <string name="Sagittarius">Sagittarius</string>
    <string name="capricorn_title">Capricorn - The Sea Goat</string>
    <string name="capricorn_dates">December 23 - January 17</string>
    <string name="Capricorn">Capricorn</string>

    <string name="navigator">Navigator</string>
    <string name="findUserSign">Type in your birthday (MM-DD) to view your sign.</string>
    <string name="chris_rock">You\'re gonna die.</string>
    <string name="chris_rock_gemini">You\'re gonna die twice.</string>
    <string name="chris_rock_scorpio">You\'re gonna die having sex.</string>
    <string name="sign_by_date">Find Sign</string>
    <string name="game_button">Game of Stars</string>
    <string name="the_good">Good</string>
    <string name="the_bad">Bad</string>
</resources>
