<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Scorpio"
                    android:textSize="15sp"
                    android:paddingTop="12dp"
                    android:onClick="showScorpioInfo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Sagittarius"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showSagittariusInfo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Capricorn"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showCapricornInfo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Aquarius"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showAquariusInfo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Aries"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showAriesInfo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Pisces"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showPiscesInfo"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Gemini"
                    android:textSize="15sp"
                    android:paddingTop="12dp"
                    android:onClick="showGeminiInfo"

                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Taurus"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showTaurusInfo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Cancer"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showCancerInfo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Leo"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showLeoInfo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Virgo"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showVirgoInfo"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Libra"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:onClick="showLibraInfo"
                    />
            </LinearLayout>



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/findUserSign"
            android:textSize="12sp"
            android:paddingTop="2dp"
            />

        <EditText
            android:id="@+id/userbday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textSize="12sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_by_date"
            android:textSize="12sp"
            android:onClick="userSign"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_button"
            android:textSize="12sp"
            android:onClick="playGame"
            />




    </LinearLayout>