<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.c4q_anthony_mcbride.horoscope_revisited.Aries$PlaceholderFragment">

    <TextView
        android:text="@string/Aries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center" />
    <TextView
        android:text="@string/aries_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:id="@+id/aries_dates_id"/>
    <TextView
        android:paddingTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aries_dates_id"
        android:gravity="center"
        android:text="@string/chris_rock" />

</LinearLayout>